# NexusAgenticManager

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  debug_db_clean.py  debug_db_state.py  debug_db_wrapper.py  debug_models.py  debug_projects.py  requirements.txt
backend/agents/: __init__.py
backend/agents/career/: __init__.py  compass.py
backend/agents/code/: __init__.py  forge.py
backend/agents/orchestrator/: __init__.py  orchestrator.py
backend/agents/pm/: __init__.py  atlas.py
backend/agents/research/: __init__.py  oracle.py
backend/api/: main.py
backend/api/routes/: agents.py  chat.py  health.py  profile.py  projects.py  research.py  sessions.py  tasks.py
backend/config/: settings.py
backend/core/: __init__.py  base_agent.py  db_context.py  logger.py  system_tools.py
backend/integrations/: __init__.py
backend/integrations/github/: __init__.py  github_client.py
backend/integrations/notion/: __init__.py  notion_client.py
backend/integrations/telegram/: __init__.py  (+1 more)
backend/llm/: __init__.py  llm_interface.py
backend/mcp/: README.md  __init__.py  base.py  registry.py
backend/scheduler/: __init__.py  scheduler.py
backend/tests/: test_mcp_integration.py  test_mcp_tools.py
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
scripts/: setup.bat  start_backend.bat  start_backend.sh  verify_mcp_orchestrator.py
tests/: verify_models.py
(+35 files in other folders)
