[package]
name = "nexus"
version = "1.0.0"
description = "NEXUS — Personal Agentic AI OS"
authors = ["Utsav Lankapati"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
